# boop

./: .gitignore  readme.md  tings.FCStd
boop/libs/arduino/: Arduino.h  EEPROM.h  SoftwareSerial.h  WiFi.h
boop/main/: array.hpp  comm.hpp  comm_channel.hpp  comm_protocol.hpp  components.hpp  config.hpp  controller.hpp  main.ino  message.hpp  ring.hpp  script.hpp  tuple.hpp  vector.hpp
boop/test/: comm_channel.cpp  config.cpp  controller.cpp
cli/: app.js  comm.js  package-lock.json  package.json  protocol.js  tcp.js
firmware/: CMakeLists.txt
firmware/libs/arduino/: EEPROM.h  ESP8266WiFi.h  SoftwareSerial.h  WiFi.h
firmware/main/: components.hpp  controller.hpp  main.ino  optional.hpp  ring.hpp  script.hpp
server/: app.js  comm.js  credentials.json  db.js  mailer.js  package-lock.json  run.sh  test.db  token.json
server/client/frontend/: Dockerfile  index.html  package-lock.json  package.json  test.sh
server/client/frontend/src/components/: Footerr.vue  Hero.vue  Inputt.vue  Navv.vue  Settings.vue
server/client/frontend/src/router/: index.js
server/client/frontend/src/utils/: api.js  cfg.js  session.js
web/backend/: app.js  cfg.js  comm.js  mailer.js  mock.sh  package-lock.json  package.json  sheets.js  store.js  test.db
web/frontend/: index.html  package-lock.json  package.json
web/frontend/src/: App.vue
web/frontend/src/components/: Device.vue  Devices.vue  Footerr.vue  Hero.vue  Inputt.vue  Moment.vue  Navv.vue  Scriptt.vue
web/frontend/src/router/: index.js
web/frontend/src/utils/: api.js  cfg.js
